fixing login page video being cutoff

--- a/ideal-angular/src/app/auth/login/login.component.css
+++ b/ideal-angular/src/app/auth/login/login.component.css
@@ -1,8 +1,3 @@
-main {
-  height: 100%;
-  font-size: 14px !important;
-}
-
 img {
   width: 50rem;
   height: 50rem;
@@ -19,6 +14,7 @@ form {
   display: flex;
   flex-direction: column;
   align-items: center;
+  font-size: 14px;
 }
 
 .center {
